--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -19,7 +19,7 @@
           <button class="continue">Continue</button>
           <button class="cancel">Cancel</button>
         </div>
-      </div>
+      </div>≤
     </div>
   </body>
 </html>
